Fix alignment of left and right section at the end of the guide

--- a/src/main/content/_assets/css/end-of-guide.css
+++ b/src/main/content/_assets/css/end-of-guide.css
@@ -68,6 +68,10 @@
     padding: 0 50px;
 }
 
+#end_of_guide_right_section h3 {
+    margin-top: 0;
+}
+
 #related-guides {
     margin-top: 32px;
 }
